--- a/views/layout.haml
+++ b/views/layout.haml
@@ -50,11 +50,11 @@
             background-color: #ffc;
             border: 1px solid #c00;
         }
-        body{font-size:1em;background:#FFF;}
+        body{font-size:1em;background:#FFF;margin:2em;}
         h1{margin-bottom:20px;}
         
         label{display:block; margin-right: 2em; margin-top:1em; width:250px;}
-        input[type=text]{width:200px;}
+        input[type=text]{width:230px;}
         form{width:500px;margin:2em;}
         p{font-size:.8em;margin:2em}
         /* begin: jQuery UI Datepicker moving pixels fix */
@@ -71,7 +71,7 @@
         
   %body
     #header
-      %h1 Programming computer multimedia with PureData
+      %h1 Programming computer multimedia with Pure Data
     #content
       =yield
   %footer
