--- a/views/index.haml
+++ b/views/index.haml
@@ -9,10 +9,10 @@
   the cost of the workshops is donation based. 
   %br
   %br
-  anyone with an interest in puredata is encouraged to attend. the format and structure of the workshops will accommodate any level of expierence with puredata. example puredata files (patches) as well as outlines with information and web links will be provided for download prior to each workshop event. each event will aim to go though the operation of puredata on some topic (or maybe several topics, depending on interest). people are invited to share information, get feedback, collaborate, and discuss. this would be a great opportunity to ask questions, get help, or to share things you have been working on.  
+  anyone curious about puredata is encouraged to attend. the format and structure of the workshops will accommodate any level of expierence with puredata. example puredata files (patches) as well as outlines with information and web links will be provided for download prior to each workshop event. each event will aim to go though the operation of puredata on some topic (or maybe several topics, depending on interest). people are invited to share information, get feedback, collaborate, and discuss. this would be a great opportunity to ask questions, get help, or to share things you have been working on.  
   %br
   %br 
-  we would like to accomodate the interests and schedules of those who'd like to attend. so if you would please fill out the following form it would help LACUNA in planning. 
+  LACUNA would like to accomodate the interests and schedules of those who'd like to attend. your answers to the questions below will help to plan and schedule future workshops. 
 
 
 %h3 INQUIRY FORM
